--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f91c6269",
+   "id": "a862f69c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4fa6b5bc",
+   "id": "de6bd806",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2331224f",
+   "id": "8b2fdfa7",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eed5526d",
+   "id": "e48dbb79",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "022feaa0",
+   "id": "2cbc44e8",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "143d0710",
+   "id": "b1b05b46",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3a01cd4d",
+   "id": "17fe9590",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "50d7cb09",
+   "id": "25f998e6",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f04820c",
+   "id": "eb4102fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5852380",
+   "id": "e08712f7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "47e481bf",
+   "id": "f0a86919",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5fe95def",
+   "id": "d12ed23f",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c00f591d",
+   "id": "acb8e76f",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "5bfb4159",
+   "id": "fa8a1902",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cacd4d30",
+   "id": "0f5ca856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "8c865705",
+   "id": "12ba5a2f",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "e686bc8d",
+   "id": "4acc7647",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "b289ee58",
+   "id": "05bf9006",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "fb817f45",
+   "id": "1de0e1e6",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "03fd3897",
+   "id": "23a64c70",
    "metadata": {},
    "outputs": [
     {
@@ -418,30 +418,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "391d0024",
+   "execution_count": 154,
+   "id": "e5e102fb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'abkjb dsd'"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
     }
    ],
    "source": [
-    "s = \"abkjb dsd  \"\n",
-    "s is "
+    "s = \"10\"\n",
+    "if s.isdigit():\n",
+    "    print((int(s) + 10))\n",
+    "else:\n",
+    "    print(\"is not a digit\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b317eeff",
+   "id": "5a822882",
    "metadata": {},
    "outputs": [],
    "source": []
