--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b542384",
+   "id": "1826674d",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "670d1fc1",
+   "id": "da4096ee",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b750829a",
+   "id": "8516bf52",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "210f0f45",
+   "id": "b33d1050",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1a2711f6",
+   "id": "b9d2a6e2",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f42ff2c2",
+   "id": "93b5a4f5",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6d76fd6f",
+   "id": "894b810c",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dd830a45",
+   "id": "36f6710d",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9d03beb7",
+   "id": "7a92409d",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "719bf336",
+   "id": "9ed18135",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "93022258",
+   "id": "770679f1",
    "metadata": {},
    "outputs": [
     {
@@ -330,10 +330,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9189d58",
+   "id": "e8b22bbf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n1=input('Please enter first number')\n",
+    "n2=input('please enter second number')\n",
+    "if n1"
+   ]
   }
  ],
  "metadata": {
