--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f59cc77a",
+   "id": "a0930e25",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fab714e6",
+   "id": "39f48698",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee10e763",
+   "id": "b129548e",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c46a70",
+   "id": "b7bd10d8",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b1ff7280",
+   "id": "49a98683",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3c556e2a",
+   "id": "bd1be3d8",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f018d720",
+   "id": "8e7767ba",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b4583e9",
+   "id": "aad3f733",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "acbf075f",
+   "id": "da614d7f",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e56e876d",
+   "id": "3bcba3d1",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5b9bb499",
+   "id": "24ce4540",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a93f2cfe",
+   "id": "3840526f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a2b020f1",
+   "id": "e959978a",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d98c0cda",
+   "id": "6748b5ae",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4cb0eff0",
+   "id": "6204f00a",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1f5c8dbd",
+   "id": "b961e618",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8aff1baa",
+   "id": "a35a8ebe",
    "metadata": {},
    "outputs": [
     {
@@ -387,10 +387,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99305639",
+   "id": "a9dcdb9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n1 = input('Enter first number')\n",
+    "n2 = input('Enter second number')\n",
+    "\n",
+    "if "
+   ]
   }
  ],
  "metadata": {
