--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a862f69c",
+   "id": "236b8aa4",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de6bd806",
+   "id": "3b5e5238",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8b2fdfa7",
+   "id": "37bcb3e4",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e48dbb79",
+   "id": "f54c8dd8",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2cbc44e8",
+   "id": "ff8b6415",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b1b05b46",
+   "id": "7c8eb56d",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17fe9590",
+   "id": "81740d40",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "25f998e6",
+   "id": "3ec90bd5",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4102fd",
+   "id": "13aa05c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e08712f7",
+   "id": "a6b6d279",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f0a86919",
+   "id": "8b31894e",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d12ed23f",
+   "id": "301ef475",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "acb8e76f",
+   "id": "ae3c0133",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "fa8a1902",
+   "id": "4f53274a",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f5ca856",
+   "id": "11f1402e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "12ba5a2f",
+   "id": "75104a3d",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "4acc7647",
+   "id": "a3c05eea",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "05bf9006",
+   "id": "634e1157",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "1de0e1e6",
+   "id": "0b5ff58d",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "23a64c70",
+   "id": "3210480e",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "e5e102fb",
+   "id": "78327787",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a822882",
+   "id": "b4a8274f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number1 = input(\"Enter number 1: \".strip())\n",
+    "number2 = input(\"Enter number 2: \".strip())\n",
+    "print(number1 + number2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8305d8e",
    "metadata": {},
    "outputs": [],
    "source": []
