--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "de51ab79",
+   "id": "6bcc12df",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "404cd9b7",
+   "id": "492688b0",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "50904a16",
+   "id": "b2b60537",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "823cbb00",
+   "id": "498ab4ac",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a11f5af7",
+   "id": "71f39e1e",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ca09731e",
+   "id": "fbd2b63f",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "edb8f98e",
+   "id": "7c9b6bca",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6df65c55",
+   "id": "165c0c02",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "49ba359e",
+   "id": "7a353824",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f874765e",
+   "id": "18e3ce98",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "94d6c9a1",
+   "id": "ca1d1f03",
    "metadata": {},
    "outputs": [
     {
@@ -253,11 +253,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6785050",
+   "id": "868fe7e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "orange"
+    "t1 = input('please input number 1 : ').stripe()\n",
+    "t2 = input('please input number 2 : ').stripe()\n",
+    "i"
    ]
   }
  ],
